--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,5 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8000"
+  "proxy": "https://bloodbank-management-system-8qru.onrender.com"
 }
